force-app/main/default/objects/Portals_Custom__c/Portals_Custom__c.object-meta.xml
<CustomObject>
    <label>Portals Custom</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portals Custom</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>