force-app/main/default/objects/Portals_Custom__c/fields/Agency_Id__c.field-meta.xml
<CustomField>
    <fullName>Agency_Id__c</fullName>
    <label>Agency_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>