force-app/main/default/objects/Portals_Custom__c/fields/Date_of_Publish__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Publish__c</fullName>
    <label>Date of Publish</label>
    <type>DateTime</type>
</CustomField>