force-app/main/default/objects/Portals_Custom__c/fields/Date_of_Unpublish__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Unpublish__c</fullName>
    <label>Date of Unpublish</label>
    <type>DateTime</type>
</CustomField>