force-app/main/default/objects/Portals_Custom__c/fields/IsTestPortal__c.field-meta.xml
<CustomField>
    <fullName>IsTestPortal__c</fullName>
    <label>IsTestPortal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>