force-app/main/default/objects/Portals_Custom__c/fields/maxAttachments__c.field-meta.xml
<CustomField>
    <fullName>maxAttachments__c</fullName>
    <label>maxAttachments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>