force-app/main/default/objects/Portals_Custom__c/fields/Publish_Listing__c.field-meta.xml
<CustomField>
    <fullName>Publish_Listing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Publish Listing</label>
    <type>Checkbox</type>
</CustomField>