force-app/main/default/objects/Portals_Custom__c/fields/SystemName__c.field-meta.xml
<CustomField>
    <fullName>SystemName__c</fullName>
    <label>SystemName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>