force-app/main/default/objects/Portals_Custom__c/fields/transferPassword__c.field-meta.xml
<CustomField>
    <fullName>transferPassword__c</fullName>
    <label>transferPassword</label>
    <length>255</length>
    <type>Text</type>
</CustomField>