force-app/main/default/objects/Portals_Custom__c/fields/transferType__c.field-meta.xml
<CustomField>
    <fullName>transferType__c</fullName>
    <label>transferType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>