force-app/main/default/objects/Portals_Custom__c/fields/transferUsername__c.field-meta.xml
<CustomField>
    <fullName>transferUsername__c</fullName>
    <label>transferUsername</label>
    <length>255</length>
    <type>Text</type>
</CustomField>