force-app/main/default/objects/Portals_Custom__c/fields/XML_URL__c.field-meta.xml
<CustomField>
    <fullName>XML_URL__c</fullName>
    <label>XML_URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>